force-app/main/default/objects/OrgPropertyIntegrationSetting__c/OrgPropertyIntegrationSetting__c.object-meta.xml
<CustomObject>
    <description>Organization Property Integration Setting information retrieved during polling for the org search functionality</description>
    <label>OrgPropertyIntegrationSetting</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgPropertyIntegrationSettings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>