force-app/main/default/objects/OrgPropertyIntegrationSetting__c/fields/AllowInboundROHUpdates__c.field-meta.xml
<CustomField>
    <fullName>AllowInboundROHUpdates__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Allow Inbound ROH Updates</description>
    <label>AllowInboundROHUpdates</label>
    <type>Checkbox</type>
</CustomField>