force-app/main/default/objects/OrgPropertyIntegrationSetting__c/fields/DefaultIntegrationTaskType__c.field-meta.xml
<CustomField>
    <fullName>DefaultIntegrationTaskType__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Default Integration Task Type</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DefaultIntegrationTaskType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>