force-app/main/default/objects/OrgPropertyIntegrationSetting__c/fields/ExcludedBookingTypes__c.field-meta.xml
<CustomField>
    <fullName>ExcludedBookingTypes__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Excluded Booking Types</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ExcludedBookingTypes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>