force-app/main/default/objects/OrgPropertyIntegrationSetting__c/fields/IgnoreNonInitialUpdateBlockCode__c.field-meta.xml
<CustomField>
    <fullName>IgnoreNonInitialUpdateBlockCode__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Ignore Non Initial Update Block Code</description>
    <label>IgnoreNonInitialUpdateBlockCode</label>
    <type>Checkbox</type>
</CustomField>