force-app/main/default/objects/OrgPropertyIntegrationSetting__c/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Type of Integration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Integration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>