force-app/main/default/objects/OrgPropertyIntegrationSetting__c/fields/MarkPickupComplete__c.field-meta.xml
<CustomField>
    <fullName>MarkPickupComplete__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Mark Pickup Complete</description>
    <label>MarkPickupComplete</label>
    <type>Checkbox</type>
</CustomField>