force-app/main/default/objects/OrgPropertyIntegrationSetting__c/fields/OperaOutboundSellLimitMapping__c.field-meta.xml
<CustomField>
    <fullName>OperaOutboundSellLimitMapping__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Opera Outbound Sell Limit Mapping</description>
    <encryptionScheme>None</encryptionScheme>
    <label>OperaOutboundSellLimitMapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>