force-app/main/default/objects/OrgPropertyIntegrationSetting__c/fields/OutboundSourceCodeMapping__c.field-meta.xml
<CustomField>
    <fullName>OutboundSourceCodeMapping__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Outbound Source Code Mapping</description>
    <encryptionScheme>None</encryptionScheme>
    <label>OutboundSourceCodeMapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>