force-app/main/default/objects/OrgPropertyIntegrationSetting__c/fields/OutboundTentativeMapping__c.field-meta.xml
<CustomField>
    <fullName>OutboundTentativeMapping__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Outbound Tentative Mapping</description>
    <encryptionScheme>None</encryptionScheme>
    <label>OutboundTentativeMapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>