force-app/main/default/objects/OrgPropertyIntegrationSetting__c/fields/PMSIDGroupCodeRequired__c.field-meta.xml
<CustomField>
    <fullName>PMSIDGroupCodeRequired__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>PMSID Group Code Required</description>
    <label>PMSIDGroupCodeRequired</label>
    <type>Checkbox</type>
</CustomField>