force-app/main/default/objects/OrgPropertyIntegrationSetting__c/fields/PMSIDGroupCodeRequiredEOBookings__c.field-meta.xml
<CustomField>
    <fullName>PMSIDGroupCodeRequiredEOBookings__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>PMS ID Group Code Required EO Bookings</description>
    <label>PMSIDGroupCodeRequiredEOBookings</label>
    <type>Checkbox</type>
</CustomField>