force-app/main/default/objects/OrgPropertyIntegrationSetting__c/fields/PostedGuestroomRevenueMapping1__c.field-meta.xml
<CustomField>
    <fullName>PostedGuestroomRevenueMapping1__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Posted Guestroom Revenue Mapping 1</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PostedGuestroomRevenueMapping1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>