force-app/main/default/objects/OrgPropertyIntegrationSetting__c/fields/PostedOtherRevenueMapping3__c.field-meta.xml
<CustomField>
    <fullName>PostedOtherRevenueMapping3__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Posted Other Revenue Mapping 3</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PostedOtherRevenueMapping3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>