force-app/main/default/objects/OrgPropertyIntegrationSetting__c/fields/PostedRevenueMapping4__c.field-meta.xml
<CustomField>
    <fullName>PostedRevenueMapping4__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Posted Revenue Mapping 4</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PostedRevenueMapping4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>