force-app/main/default/objects/OrgPropertyIntegrationSetting__c/fields/SendControlBlockLocallyFlag__c.field-meta.xml
<CustomField>
    <fullName>SendControlBlockLocallyFlag__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Send Control Block Locally</description>
    <label>SendControlBlockLocallyFlag</label>
    <type>Checkbox</type>
</CustomField>