force-app/main/default/objects/OrgPropertyIntegrationSetting__c/fields/SendDaysDateType__c.field-meta.xml
<CustomField>
    <fullName>SendDaysDateType__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Send Days Date Type</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SendDaysDateType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>