force-app/main/default/objects/OrgPropertyIntegrationSetting__c/fields/SendDaysFuture__c.field-meta.xml
<CustomField>
    <fullName>SendDaysFuture__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Send Days Future</description>
    <label>SendDaysFuture</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>