force-app/main/default/objects/OrgPropertyIntegrationSetting__c/fields/SendDaysPast__c.field-meta.xml
<CustomField>
    <fullName>SendDaysPast__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Send Days Past</description>
    <label>SendDaysPast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>