force-app/main/default/objects/OrgPropertyIntegrationSetting__c/fields/SendEventOnlyBookings__c.field-meta.xml
<CustomField>
    <fullName>SendEventOnlyBookings__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Send Event Only Bookings</description>
    <label>SendEventOnlyBookings</label>
    <type>Checkbox</type>
</CustomField>